// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renderChartConfig Query Events simple select + group by query logs 1`] = `
Array [
  Object {
    "ServiceName": "app",
    "count": "1",
  },
  Object {
    "ServiceName": "api",
    "count": "1",
  },
]
`;

exports[`renderChartConfig Query Events simple select + where query logs 1`] = `
Array [
  Object {
    "Body": "Oh no! Something went wrong!",
  },
]
`;

exports[`renderChartConfig Query Metrics calculates min_rate/max_rate correctly for sum metrics: maxSum 1`] = `
Array [
  Object {
    "Value": 24,
    "__hdx_time_bucket": "2022-01-05T00:00:00Z",
  },
  Object {
    "Value": 134,
    "__hdx_time_bucket": "2022-01-05T00:10:00Z",
  },
]
`;

exports[`renderChartConfig Query Metrics calculates min_rate/max_rate correctly for sum metrics: minSum 1`] = `
Array [
  Object {
    "Value": 15,
    "__hdx_time_bucket": "2022-01-05T00:00:00Z",
  },
  Object {
    "Value": 52,
    "__hdx_time_bucket": "2022-01-05T00:10:00Z",
  },
]
`;

exports[`renderChartConfig Query Metrics handles counter resets correctly for sum metrics 1`] = `
Array [
  Object {
    "Value": 15,
    "__hdx_time_bucket": "2022-01-05T00:00:00Z",
  },
  Object {
    "Value": 52,
    "__hdx_time_bucket": "2022-01-05T00:10:00Z",
  },
]
`;

exports[`renderChartConfig Query Metrics single avg gauge with group-by 1`] = `
Array [
  Object {
    "__hdx_time_bucket": "2022-01-05T00:00:00Z",
    "arrayElement(ResourceAttributes, 'host')": "host2",
    "avg(toFloat64OrNull(toString(LastValue)))": 4,
  },
  Object {
    "__hdx_time_bucket": "2022-01-05T00:00:00Z",
    "arrayElement(ResourceAttributes, 'host')": "host1",
    "avg(toFloat64OrNull(toString(LastValue)))": 6.25,
  },
  Object {
    "__hdx_time_bucket": "2022-01-05T00:05:00Z",
    "arrayElement(ResourceAttributes, 'host')": "host2",
    "avg(toFloat64OrNull(toString(LastValue)))": 4,
  },
  Object {
    "__hdx_time_bucket": "2022-01-05T00:05:00Z",
    "arrayElement(ResourceAttributes, 'host')": "host1",
    "avg(toFloat64OrNull(toString(LastValue)))": 80,
  },
]
`;

exports[`renderChartConfig Query Metrics single avg gauge with where 1`] = `
Array [
  Object {
    "__hdx_time_bucket": "2022-01-05T00:00:00Z",
    "avg(toFloat64OrNull(toString(LastValue)))": 6.25,
  },
  Object {
    "__hdx_time_bucket": "2022-01-05T00:05:00Z",
    "avg(toFloat64OrNull(toString(LastValue)))": 80,
  },
]
`;

exports[`renderChartConfig Query Metrics single max/avg/sum gauge 1`] = `
Array [
  Object {
    "__hdx_time_bucket": "2022-01-05T00:00:00Z",
    "avg(toFloat64OrNull(toString(LastValue)))": 5.125,
  },
  Object {
    "__hdx_time_bucket": "2022-01-05T00:05:00Z",
    "avg(toFloat64OrNull(toString(LastValue)))": 42,
  },
]
`;

exports[`renderChartConfig Query Metrics single max/avg/sum gauge 2`] = `
Array [
  Object {
    "__hdx_time_bucket": "2022-01-05T00:00:00Z",
    "max(toFloat64OrNull(toString(LastValue)))": 6.25,
  },
  Object {
    "__hdx_time_bucket": "2022-01-05T00:05:00Z",
    "max(toFloat64OrNull(toString(LastValue)))": 80,
  },
]
`;

exports[`renderChartConfig Query Metrics single max/avg/sum gauge 3`] = `
Array [
  Object {
    "__hdx_time_bucket": "2022-01-05T00:00:00Z",
    "sum(toFloat64OrNull(toString(LastValue)))": 10.25,
  },
  Object {
    "__hdx_time_bucket": "2022-01-05T00:05:00Z",
    "sum(toFloat64OrNull(toString(LastValue)))": 84,
  },
]
`;

exports[`renderChartConfig Query Metrics single sum rate 1`] = `
Array [
  Object {
    "Value": 19,
    "__hdx_time_bucket": "2022-01-05T00:00:00Z",
  },
  Object {
    "Value": 79,
    "__hdx_time_bucket": "2022-01-05T00:05:00Z",
  },
  Object {
    "Value": 5813,
    "__hdx_time_bucket": "2022-01-05T00:10:00Z",
  },
  Object {
    "Value": 78754,
    "__hdx_time_bucket": "2022-01-05T00:15:00Z",
  },
]
`;

exports[`renderChartConfig Query Metrics single sum value 1`] = `
Array [
  Object {
    "Value": 950400,
    "__hdx_time_bucket": "2022-01-05T00:00:00Z",
  },
  Object {
    "Value": 1641600,
    "__hdx_time_bucket": "2022-01-05T00:10:00Z",
  },
]
`;

exports[`renderChartConfig Query Metrics three_timestamps_bounded histogram with reset (p50) 1`] = `
Array [
  Object {
    "__hdx_time_bucket": "2022-01-05T00:00:00Z",
    "sum(toFloat64OrNull(toString(Rate)))": 10,
  },
  Object {
    "__hdx_time_bucket": "2022-01-05T00:01:00Z",
    "sum(toFloat64OrNull(toString(Rate)))": 10,
  },
  Object {
    "__hdx_time_bucket": "2022-01-05T00:02:00Z",
    "sum(toFloat64OrNull(toString(Rate)))": 30,
  },
]
`;

exports[`renderChartConfig Query Metrics two_timestamps_bounded histogram (p25) 1`] = `
Array [
  Object {
    "__hdx_time_bucket": "2022-01-05T00:00:00Z",
    "sum(toFloat64OrNull(toString(Rate)))": 0,
  },
  Object {
    "__hdx_time_bucket": "2022-01-05T00:01:00Z",
    "sum(toFloat64OrNull(toString(Rate)))": 10,
  },
]
`;

exports[`renderChartConfig Query Metrics two_timestamps_bounded histogram (p50) 1`] = `
Array [
  Object {
    "__hdx_time_bucket": "2022-01-05T00:00:00Z",
    "sum(toFloat64OrNull(toString(Rate)))": 0,
  },
  Object {
    "__hdx_time_bucket": "2022-01-05T00:01:00Z",
    "sum(toFloat64OrNull(toString(Rate)))": 20,
  },
]
`;

exports[`renderChartConfig Query Metrics two_timestamps_bounded histogram (p90) 1`] = `
Array [
  Object {
    "__hdx_time_bucket": "2022-01-05T00:00:00Z",
    "sum(toFloat64OrNull(toString(Rate)))": 0,
  },
  Object {
    "__hdx_time_bucket": "2022-01-05T00:01:00Z",
    "sum(toFloat64OrNull(toString(Rate)))": 30,
  },
]
`;

exports[`renderChartConfig Query Metrics two_timestamps_lower_bound_inf histogram (p50) 1`] = `
Array [
  Object {
    "__hdx_time_bucket": "2022-01-05T00:00:00Z",
    "sum(toFloat64OrNull(toString(Rate)))": 0,
  },
  Object {
    "__hdx_time_bucket": "2022-01-05T00:01:00Z",
    "sum(toFloat64OrNull(toString(Rate)))": 1,
  },
]
`;

exports[`renderChartConfig Query Metrics two_timestamps_upper_bound_inf histogram (p50) 1`] = `
Array [
  Object {
    "__hdx_time_bucket": "2022-01-05T00:00:00Z",
    "sum(toFloat64OrNull(toString(Rate)))": 0,
  },
  Object {
    "__hdx_time_bucket": "2022-01-05T00:01:00Z",
    "sum(toFloat64OrNull(toString(Rate)))": 30,
  },
]
`;
